apps/production/resumelo/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumelo
  namespace: resumelo-dev
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: resumelo
          image: "registry.yesidlopez.de/resumelo-dev:v20260430.194929.5d624db" # {"$imagepolicy": "resumelo-dev:resumelo-dev"}
