apps/production/resumelo/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resumelo-ingress
  namespace: resumelo-dev
spec:
  tls:
    - hosts:
        - api-dev.resumelo.me
      secretName: resumelo-tls
  rules:
    - host: api-dev.resumelo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resumelo
                port:
                  number: 80
